new features (lint, jump to error, package install)

--- a/html/output-panel.html
+++ b/html/output-panel.html
@@ -1,6 +1,6 @@
 <div id="brackets-build-sys-panel" class="bottom-panel">
 	<div class="toolbar simple-toolbar-layout">
-		<div class="title">Elm Build Output</div>
+		<div class="title">Elm related Output</div>
 		<div class="tools">
 			<button class="btn small build">Build</button>
 			<button class="btn small clear">Clear</button>
