elm-format elm-oracle support, menu gone, extended panel

--- a/html/output-panel.html
+++ b/html/output-panel.html
@@ -3,6 +3,8 @@
 		<div class="title">Elm related Output</div>
 		<div class="tools">
 			<button class="btn small build">Build</button>
+            <button class="btn small pkg">Pkg install</button>
+            <button class="btn small format">Format</button>
 			<button class="btn small clear">Clear</button>
 		</div>
 		<a href="#" class="close">&times;</a>
