restructured file tree, preparations for settings dialog

--- a/html/output-panel.html
+++ b/html/output-panel.html
@@ -1,11 +1,12 @@
 <div id="brackets-build-sys-panel" class="bottom-panel">
 	<div class="toolbar simple-toolbar-layout">
-		<div class="title">Elm related Output</div>
+		<div class="title">{{S.PANEL_HEADER}}</div>
 		<div class="tools">
-			<button class="btn small build">Build</button>
-            <button class="btn small pkg">Pkg install</button>
-            <button class="btn small format">Format</button>
-			<button class="btn small clear">Clear</button>
+			<button class="btn small preferences" title="{{S.PREFERENCES_HOVER}}"><i class="octicon octicon-settings"></i></button>
+            <button class="btn small build" title="{{S.BUILD_HOVER}}">{{S.BUILD}}</button>
+            <button class="btn small pkg" title="{{S.PKG_INSTALL_HOVER}}">{{S.PKG_INSTALL}}</button>
+            <button class="btn small format" title="{{S.FORMAT_HOVER}}">{{S.FORMAT}}</button>
+			<button class="btn small clear" title="{{S.CLEAR_HOVER}}">{{S.CLEAR}}</button>
 		</div>
 		<a href="#" class="close">&times;</a>
 	</div>
