--- a/html/preferenceDialog.html
+++ b/html/preferenceDialog.html
@@ -30,7 +30,7 @@
             </tr>
             <tr style="display: none" id="pathSettings">
                 <td>
-                    Custom paths
+                    <h1>Custom paths</h1>
                 </td>
                 <td>
                 </td>
@@ -48,7 +48,7 @@
                 <td><input type="text" id="elm-oracleBinary"><button class="btn btn-primary" id="browseElm-oracleBinary">browse</button></td>
             </tr>
             <tr>
-                <td>elm-make options</td>
+                <td><h2>elm-make options</h2></td>
                 <td></td>
             </tr>
             <tr>
@@ -61,7 +61,7 @@
             </tr>
             <tr>
                 <td>report format json/text</td>
-                <td><label>json<input type="radio" id="reportformatjson" name ="reportformat" checked></label><label>text<input type="radio" id="reportformattext" name="reportformat"></label></td>
+                <td><label><input type="radio" id="reportformatjson" name ="reportformat" checked> json</label><label><input type="radio" id="reportformattext" name="reportformat"> text</label></td>
             </tr>
             <tr>
                 <td>show warnings?</td>
@@ -72,10 +72,10 @@
                 <td><input type="text" id="docsoutputfile"></td>
             </tr>
             <tr>
-                <td>elm-format options</td><td></td>
+                <td><h2>elm-format options</h2></td><td></td>
             </tr>
             <tr>
-                <td>elm-oracle options</td><td></td>
+                <td><h2>elm-oracle options</h2></td><td></td>
             </tr>
         </table>
     </div>
