fixed preference application

--- a/html/preferenceDialog.html
+++ b/html/preferenceDialog.html
@@ -12,7 +12,13 @@
                     {{S.VALUES_THEAD}}
                 </th>
             </tr>
-
+            <tr>
+                <td>
+                    <h2>General settings</h2>
+                </td>
+                <td>
+                </td>
+            </tr>
             <tr>
                 <td>
                     {{S.PATHORCUSTOM}}
@@ -82,6 +88,10 @@
             <tr>
                 <td>output file (default: [name of formatted file])</td>
                 <td><input type="text" id="formatout" name="formatout"></td>
+            </tr>
+            <tr>
+                <td>yes to all</td>
+                <td><input type="checkbox" id="formatyes" name="formatyes"></td>
             </tr>
         </table>
     </div>
