renamed stuff ("brackets-build-sys" etc.)

--- a/html/output-panel.html
+++ b/html/output-panel.html
@@ -1,4 +1,4 @@
-<div id="brackets-build-sys-panel" class="bottom-panel">
+<div id="elm-panel" class="bottom-panel">
 	<div class="toolbar simple-toolbar-layout">
 		<div class="title">{{S.PANEL_HEADER}}</div>
 		<div class="tools">
