--- a/html/packageManager.html
+++ b/html/packageManager.html
@@ -3,13 +3,21 @@
         <h1 class="dialog-title">elm packages</h1>
     </div>
     <div class="modal-body tab-content">
+        <div class="control-group">
+            <div class="input-append" style="height: 28px; line-height: 28px;">
+                <input type="text" class="form-control" name="search" id="search" placeholder="Search for packages...">
+                <span class="input-group-btn">
+                    <button class="btn btn-default" style="margin: 0;" type="button">Go!</button>
+                </span>
+            </div>
+        </div>
         <table class="table table-condensed">
             <tr>
                 <th>
                     Name
                 </th>
                 <th>
-                    Description
+                    Summary
                 </th>
                 <th>
                     Versions
@@ -19,5 +27,8 @@
                 </th>
             </tr>
         </table>
+    </div>
+    <div class="modal-footer">
+        <button data-button-id="close" class="dialog-button btn btn-80">{{S.BUTTON_CLOSE}}</button>
     </div>
 </div>
