--- a/html/packageManager.html
+++ b/html/packageManager.html
@@ -1,32 +1,53 @@
-<div id="elm-package-dialog" class="modal">
+<div id="elm-project-dialog" class="modal">
     <div class="modal-header">
         <h1 class="dialog-title">elm packages</h1>
     </div>
-    <div class="modal-body tab-content">
-        <div class="control-group">
-            <div class="input-append" style="height: 28px; line-height: 28px;">
-                <input type="text" class="form-control" name="search" id="search" placeholder="Search for packages...">
-                <span class="input-group-btn">
-                    <button class="btn btn-default" style="margin: 0;" type="button">Go!</button>
-                </span>
+    <div class="modal-body">
+        <ul class="nav nav-tabs" id="elm-project-tabs">
+            <li class="active"><a href="#elm-project-general" >General Settings</a></li>
+            <li><a href="#elm-project-dependencies">Dependecies</a></li>
+        </ul>
+        <div class="tab-content">
+            <div id="elm-project-general" class="tab-pane active">
+                <ul>
+                    <li>version</li>
+                    <li>summary</li>
+                    <li>repository</li>
+                    <li>license</li>
+                    <li>source-directory</li>
+                    <li>exposed-modules</li>
+                </ul>
+            </div>
+            <div id="elm-project-dependencies" class="tab-pane">
+                <div id="current"></div>
+                <div id="new">
+                    <div class="control-group">
+                        <div class="input-append" style="height: 28px; line-height: 28px;">
+                            <input type="text" class="form-control" name="search" id="search" placeholder="Search for packages...">
+                            <span class="input-group-btn">
+                                <button class="btn btn-default" style="margin: 0;" type="button">Go!</button>
+                            </span>
+                        </div>
+                    </div>
+                    <table class="table table-condensed">
+                        <tr>
+                            <th>
+                                Name
+                            </th>
+                            <th>
+                                Summary
+                            </th>
+                            <th>
+                                Versions
+                            </th>
+                            <th>
+
+                            </th>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
-        <table class="table table-condensed">
-            <tr>
-                <th>
-                    Name
-                </th>
-                <th>
-                    Summary
-                </th>
-                <th>
-                    Versions
-                </th>
-                <th>
-
-                </th>
-            </tr>
-        </table>
     </div>
     <div class="modal-footer">
         <button data-button-id="close" class="dialog-button btn btn-80">{{S.BUTTON_CLOSE}}</button>
