--- a/html/packageManager.html
+++ b/html/packageManager.html
@@ -10,12 +10,12 @@
         <div class="tab-content">
             <div id="elm-project-general" class="tab-pane active">
                 <div class="container-fluid">
-                    <div class="row-fluid"><div class="span4 strong">Version</div><div class="pull-right"><input type="text" name="version"></div></div>
-                    <div class="row-fluid"><div class="span4">Summary</div><div class="pull-right"><textarea name="summary"></textarea></div></div>
-                    <div class="row-fluid"><div class="span4">Repository</div><div class="pull-right"><input type="text" name="repository"></div></div>
-                    <div class="row-fluid"><div class="span4">License</div><div class="pull-right"><select name="license">{{#licenses}}<option val="{{name}}">{{name}}</option>{{/licenses}}</select></div></div>
-                    <div class="row-fluid"><div class="span4">Source Directory</div><div class="pull-right"><input type="text" name="source-directory"></div></div>
-                    <div class="row-fluid"><div class="span4">Exposed Modules</div><div class="pull-right"><textarea name="exposed-modules"></textarea></div></div>
+                    <div class="row-fluid"><div class="span4 strong">Version</div><div class="pull-right"><input type="text" name="version" id="version"></div></div>
+                    <div class="row-fluid"><div class="span4">Summary</div><div class="pull-right"><textarea name="summary" id="summary"></textarea></div></div>
+                    <div class="row-fluid"><div class="span4">Repository</div><div class="pull-right"><input type="text" name="repository" id="repository"></div></div>
+                    <div class="row-fluid"><div class="span4">License</div><div class="pull-right"><select name="license" id="license">{{#licenses}}<option val="{{short}}">{{name}}</option>{{/licenses}}</select></div></div>
+                    <div class="row-fluid"><div class="span4">Source Directory</div><div class="pull-right"><textarea name="source-directory" id="source-directory"></textarea></div></div>
+                    <div class="row-fluid"><div class="span4">Exposed Modules</div><div class="pull-right"><textarea name="exposed-modules" id="exposed-modules"></textarea></div></div>
                 </div>
             </div>
             <div id="elm-project-dependencies" class="tab-pane">
@@ -32,9 +32,6 @@
 
                             </th>
                         </tr>
-                        {{#dependencies}}
-                            <tr><td>{{name}}</td><td>{{version}}</td><td><button id="remove" data-id="{{name}}">remove</button></td></tr>
-                        {{/dependencies}}
                     </table>
                 </div>
                 <div id="new">
