--- a/html/packageManager.html
+++ b/html/packageManager.html
@@ -14,24 +14,28 @@
                     <div class="row-fluid"><div class="span4">Summary</div><div class="pull-right"><textarea name="summary" id="summary"></textarea></div></div>
                     <div class="row-fluid"><div class="span4">Repository</div><div class="pull-right"><input type="text" name="repository" id="repository"></div></div>
                     <div class="row-fluid"><div class="span4">License</div><div class="pull-right"><select name="license" id="license">{{#licenses}}<option val="{{short}}">{{name}}</option>{{/licenses}}</select></div></div>
-                    <div class="row-fluid"><div class="span4">Source Directory</div><div class="pull-right"><textarea name="source-directory" id="source-directory"></textarea></div></div>
+                    <div class="row-fluid"><div class="span4">Source Directories</div><div class="pull-right"><textarea name="source-directories" id="source-directories"></textarea></div></div>
                     <div class="row-fluid"><div class="span4">Exposed Modules</div><div class="pull-right"><textarea name="exposed-modules" id="exposed-modules"></textarea></div></div>
+                    <div class="row-fluid"><div class="span4">Elm Version</div><div class="pull-right" id="elm-version"><input type="text" name="vlow" id="vlow"><p> &lt;= v &lt; </p><input type=text name="vhigh" id="vhigh"></div></div>
                 </div>
             </div>
             <div id="elm-project-dependencies" class="tab-pane">
                 <div id="current">
                     <table class="table table-condensed" id="dependencies">
-                        <tr>
-                            <th>
-                                Name
-                            </th>
-                            <th>
-                                Versions
-                            </th>
-                            <th>
+                        <thead>
+                            <tr>
+                                <th>
+                                    Name
+                                </th>
+                                <th>
+                                    Versions
+                                </th>
+                                <th>
 
-                            </th>
-                        </tr>
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody></tbody>
                     </table>
                 </div>
                 <div id="new">
@@ -44,20 +48,23 @@
                         </div>
                     </div>
                     <table class="table table-condensed" id="availiable">
-                        <tr>
-                            <th>
-                                Name
-                            </th>
-                            <th>
-                                Summary
-                            </th>
-                            <th>
-                                Versions
-                            </th>
-                            <th>
+                        <thead>
+                            <tr>
+                                <th>
+                                    Name
+                                </th>
+                                <th>
+                                    Summary
+                                </th>
+                                <th>
+                                    Versions
+                                </th>
+                                <th>
 
-                            </th>
-                        </tr>
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody></tbody>
                     </table>
                 </div>
             </div>
