Finished first ver. of project settings dialog. started to rework invocation of elm binaries (invoke with cwd set to path of elm-package.json).

--- a/html/projectSettingsDialog.html
+++ b/html/projectSettingsDialog.html
@@ -1,6 +1,6 @@
 <div id="elm-project-dialog" class="modal">
     <div class="modal-header">
-        <h1 class="dialog-title">elm packages</h1>
+        <h1 class="dialog-title">elm project</h1>
     </div>
     <div class="modal-body">
         <ul class="nav nav-tabs" id="elm-project-tabs">
