--- a/html/chooseElmPackage.html
+++ b/html/chooseElmPackage.html
@@ -1,6 +1,6 @@
 <div id="elm-choose-dialog" class="modal">
     <div class="modal-header">
-        <h1 class="dialog-title">Please choose elm-package.json</h1>
+        <h1 class="dialog-title">{{S.ELM_CHOOSE_DIALOG}}</h1>
     </div>
     <div class="modal-body">
         <div class="container-fluid">
