Typos fixed, german translation added

--- a/html/output-panel.html
+++ b/html/output-panel.html
@@ -3,7 +3,7 @@
 		<div class="title">{{S.PANEL_HEADER}}</div>
 		<div class="tools">
 			<button class="btn small preferences" title="{{S.PREFERENCES_HOVER}}"><i class="octicon octicon-settings"></i></button>
-            <button class="btn small package_manager" title="{{S.PROJECT_DIALOG_HOVER}}"><i class="octicon octicon-package"></i></button>
+            <button class="btn small project" title="{{S.PROJECT_DIALOG_HOVER}}"><i class="octicon octicon-package"></i></button>
             <button class="btn small build" title="{{S.BUILD_HOVER}}">{{S.BUILD}}</button>
             <!--<button class="btn small pkg" title="{{S.PKG_INSTALL_HOVER}}">{{S.PKG_INSTALL}}</button>-->
             <button class="btn small format" title="{{S.FORMAT_HOVER}}">{{S.FORMAT}}</button>
