--- a/html/projectSettingsDialog.html
+++ b/html/projectSettingsDialog.html
@@ -22,7 +22,7 @@
             <div id="elm-project-dependencies" class="tab-pane">
                 <div id="current">
                     <div class="container-fluid" id="dependencies">
-                        <div class="row-fluid" id="header"><div class="span4 strong">{{S.NAME}}</div><div class="span4 strong">{{S.Version}}s</div><div class="span4"></div></div>
+                        <div class="row-fluid" id="header"><div class="span4 strong">{{S.NAME}}</div><div class="span4 strong">{{S.VERSION}}s</div><div class="span4"></div></div>
 
                     </div>
                 </div>
@@ -36,7 +36,7 @@
                         </div>
                     </div>
                     <div class="container-fluid" id="availiable">
-                        <div class="row-fluid" id="header"><div class="span3 strong">{{S.NAME}}</div><div class="span3 strong">{{S.SUMMARY}}</div><div class="span3 strong">{{S.Version}}s</div><div class="span3"></div></div>
+                        <div class="row-fluid" id="header"><div class="span3 strong">{{S.NAME}}</div><div class="span3 strong">{{S.SUMMARY}}</div><div class="span3 strong">{{S.VERSION}}s</div><div class="span3"></div></div>
                     </div>
                 </div>
             </div>
