--- a/html/output-panel.html
+++ b/html/output-panel.html
@@ -2,7 +2,8 @@
 	<div class="toolbar simple-toolbar-layout">
 		<div class="title">{{S.PANEL_HEADER}}</div>
 		<div class="tools">
-			<button class="btn small preferences" title="{{S.PREFERENCES_HOVER}}"><i class="octicon octicon-settings"></i></button>
+			<button class="btn small repl" title="{{S.REPL_HOVER}}"><i class="octicon octicon-terminal"></i></button>
+            <button class="btn small preferences" title="{{S.PREFERENCES_HOVER}}"><i class="octicon octicon-settings"></i></button>
             <button class="btn small project" title="{{S.PROJECT_DIALOG_HOVER}}"><i class="octicon octicon-package"></i></button>
             <button class="btn small build" title="{{S.BUILD_HOVER}}">{{S.BUILD}}</button>
             <!--<button class="btn small pkg" title="{{S.PKG_INSTALL_HOVER}}">{{S.PKG_INSTALL}}</button>-->
